YAML-STANDARD/deployments/ingress-fastapi.yaml
# Configuration de l'Ingress pour l'application FastAPI
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress  # Nom de l'Ingress pour identifier cette ressource
  namespace: standard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubernetes.julien-hennebo.cloudns.be  # Remplacez par votre domaine
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service  # Nom du service FastAPI auquel l'Ingress dirigera le trafic
                port:
                  number: 80  # Port sur lequel le service FastAPI est exposé
